# Student-management-system

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DESIGN.md  LICENSE  Makefile  README.md  StudentManagementSystem  cmake_install.cmake  input.txt  students.db
src/: main.cpp
src/core/: Logger.cpp  Logger.hpp  ThreadPool.hpp  Utils.hpp
src/model/: Course.hpp  Student.hpp
src/repository/: FileRepository.hpp
src/service/: StudentService.cpp  StudentService.hpp
src/ui/: CLI.cpp  CLI.hpp
tests/: test_trim.cpp
